[package]
name = "espresso"
description = "AT based driver crate for ESP8266 WiFi modules"
homepage = "https://github.com/dbrgn/espresso/"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
atat = { git = "https://github.com/BlackbirdHQ/atat", branch = "master" }
embedded-hal = "0.2"
heapless = "0.5"
nb = "0.1"

[dev-dependencies]
env_logger = "0.6"
log = "0.4"
serialport = { git = "https://gitlab.com/dbrgn/serialport-rs", branch = "embedded", features = ["embedded"] }
void = "1"

[features]
logging = ["atat/logging"]

[[example]]
name = "linux"
required-features = ["logging"]
